cleans up what is tracked in git

--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,7 @@ buildings-bbl-qa.bat
 *qa.bat
 data/work.gdb/
 src/bbl-dab-load.sql
-src/bbl-qa-ack.sql
+*-dev.bat
+*-stg.bat
+*-prd.bat
+bbl-qa.csv
